[package]
name = "iron-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.5.1", features = ["derive"] }
nix = { version = "0.27.1", features = ["socket"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.32.0", features = ["full"] }
